Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- now possible to register for forum post publishing events

Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-